# genfalg_r

./: .gitignore  Cargo.toml
src/: check_falg.rs  check_min_repr.rs  contains_results.rs  genfalg.rs  genfalgload.rs  genfalgload2.rs  genfalgload_curord_perm.rs  genfalgstabload.rs  genstab.rs  get_qord_index.rs  iso_remove.rs  split_gen_results.rs  tr_iso_remove.rs
