[package]
name = "genfalg"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "genfalg"
path = "src/genfalg.rs"

[[bin]]
name = "iso_remove"
path = "src/iso_remove.rs"

[[bin]]
name = "tr_iso_remove"
path = "src/tr_iso_remove.rs"


[dependencies]
falglib = { path = "c:/users/mhycko/source/repos/mhcheops8b/falglib_r" }
permlib = { path = "c:/users/mhycko/source/repos/mhcheops8b/permlib_r" }

