[package]
name = "genfalg"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "genfalg"
path = "src/genfalg.rs"

[[bin]]
name = "genfalgload"
path = "src/genfalgload.rs"

[[bin]]
name = "genfalgload2"
path = "src/genfalgload2.rs"

[[bin]]
name = "genfalgstabload"
path = "src/genfalgstabload.rs"

[[bin]]
name = "iso_remove"
path = "src/iso_remove.rs"

[[bin]]
name = "tr_iso_remove"
path = "src/tr_iso_remove.rs"

[[bin]]
name = "genstab"
path = "src/genstab.rs"

[[bin]]
name = "check_min_repr"
path = "src/check_min_repr.rs"

[[bin]]
name = "check_falg"
path = "src/check_falg.rs"

[[bin]]
name = "contains_results"
path = "src/contains_results.rs"

[[bin]]
name = "get_qord_index"
path = "src/get_qord_index.rs"

[[bin]]
name = "genfalgload_curord_perm"
path = "src/genfalgload_curord_perm.rs"


[dependencies]
# falglib = { path = "c:/users/mhycko/source/repos/mhcheops8b/falglib_r" }
falglib = { git = "https://github.com/mhcheops8b/falglib_r.git" }
serde-pickle = "1.2.0"
# permlib = { path = "c:/users/mhycko/source/repos/mhcheops8b/permlib_r" }
permlib = { git = "https://github.com/mhcheops8b/permlib_r.git" }

